# StoryCAD

./: .editorconfig  .gitignore  ACKNOWLEDGE.md  ADDITIONAL-LICENSE-PERMISSIONS.TXT  AGENTS.md  BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConvertInstallFiles.cs  ConvertInstallFiles.ps1  ConvertLists.ps1  ConvertTools.ps1  CreateInstallManifest.deps.json  CreateInstallManifest.runtimeconfig.dev.json  DEVNOTES.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Gemfile  PRIVACY_POLICY.TXT  README.md  README_IMPLEMENTATION.md  REMAINING_ISSUES.md  ROADMAP.md  SECURITY_ANALYSIS.md  SUPPORT.md  StoryBuilder.sln  StoryBuilder.sln.DotSettings  StoryCAD.sln  StoryCAD.sln.DotSettings  USERNOTES.md  _config.yml  global.json  index.md  issue-update.md  serve-docs.ps1
.claude/: architecture.md  build_commands.md  repos.md  settings.local.json  testing.md
.github/: dependabot.yml
.run/: StoryCAD.run.xml
CollaboratorLib/: Collaborator.cs  CollaboratorLib.csproj  WorkflowRunner.cs
CreateInstallManifest/: CreateInstallManifest.csproj  CreateInstallManifest.dllUndefined  DirectoryLister.cs  Program.cs
NRtfTree/: GlobalUsings.cs  ImageNode.cs  InfoGroup.cs  NRtfTree.csproj  ObjectNode.cs  RtfColorTable.cs  RtfDocument.cs  RtfFontTable.cs  RtfLex.cs  RtfNodeCollection.cs  RtfNodeType.cs  RtfReader.cs  RtfTextFormat.cs  RtfToken.cs  RtfTokenType.cs  RtfTree.cs  RtfTreeNode.cs  SarParser.cs
StoryBuilder/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  StoryBuilder.csproj  app.manifest
StoryBuilderLib/: Resources.xaml  StoryBuilderLib.csproj
StoryBuilderTests/: App.xaml  App.xaml.cs  ControlLoaderTests.cs  ControllerTests.cs  Initialize.cs  InstallServiceTests.cs  ListLoaderTests.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PlotPointViewModelTests.cs  README.md  SceneViewModelTests.cs  StoryBuilderTestSetup.cs  StoryBuilderTests.csproj  StoryElementCollectionTest.cs  StoryModelTests.cs  TestClass.cs  ToolLoaderTests.cs  UnitTest1.cs  app.manifest
StoryCAD/: App.xaml  App.xaml.cs  BuildIncrement.ps1  GlobalUsings.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  StoryCAD.csproj  app.manifest
StoryCADLib/: GlobalUsings.cs  NLog.config  Package.appxmanifest  README.md  StoryCADLib.csproj
StoryCADLib/bindings/python/: .gitignore  GETTING_STARTED.md  PUBLISHING.md  README.md  _meta.py  build-wheel.sh  hatch_build.py  pyproject.toml  test.py
StoryCADLib/bindings/python/storycad/: __init__.py
StoryCADLib/bindings/python/tests/: conftest.py  test_api.py  test_coverage.py  test_pure.py
StoryCADTests/: App.xaml  App.xaml.cs  BackendServiceTests.cs  BackendTests.cs  CharacterModelTests.cs  CollaboratorIntegrationTests.cs  CollaboratorInterfaceTests.cs  CollaboratorServiceTests.cs  ControlLoaderTests.cs  DragAndDropTests.cs  ENVTests.cs  FileOpenMenu.xaml  FileOpenMenu.xaml.cs  FileOpenMenuTests.cs  FileOpenVMTests.cs  FileTests.cs  InstallServiceTests.cs  IocLoaderTests.cs  ListLoaderTests.cs  LockTest.cs  LockTests.cs  MainWindow.xaml  MainWindow.xaml.cs  Manual Tests.xlsx  MockCollaboratorTests.cs  NodeItemTests.cs  OutlineServiceBeatTests.cs  OutlineServiceTests.cs  OutlineViewModelTests.cs  Package.appxmanifest  PreferenceIOTests.cs  ProblemVMTests.cs  ProblemViewModelTests.cs  Program.cs  ReportFormatterTests.cs  STBXFile.cs  SceneViewModelTests.cs  SearchServiceTests.cs  SemanticKernelAPITests.cs  SemanticKernelApiTests.cs  (+16 more)
design/: Remove and Replace DataSource #1067.md
devdocs/: AI_workflow.md  architecture.md  (+93 more)
(+1315 files in other folders)
