[build-system]
requires = ["hatchling>=1.27", "pefile>=2023.2.7"]
build-backend = "hatchling.build"

[project]
name = "StoryCADLib"
dynamic = ["version", "description", "authors"]
readme = "README.md"
requires-python = ">=3.10"
# SPDX expression captures the base license. GPLv3 §7 additional permissions
# (Collaborator module exception, App Store distribution) live in
# ADDITIONAL-LICENSE-PERMISSIONS.TXT — both files are bundled in the wheel
# via license-files below. SPDX has no expression form for our §7 carve-out,
# so the file is the source of truth.
license = "GPL-3.0-or-later"
license-files = ["LICENSE.TXT", "ADDITIONAL-LICENSE-PERMISSIONS.TXT"]
keywords = ["storycad", "writing", "outline", "story", "pythonnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pythonnet>=3.0.3"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/storybuilder-org/StoryCAD"
Issues = "https://github.com/storybuilder-org/StoryCAD/issues"

[tool.hatch.version]
source = "code"
path = "_meta.py"
expression = "version"

[tool.hatch.metadata.hooks.custom]
path = "_meta.py"

[tool.hatch.build.targets.wheel]
packages = ["storycad"]
artifacts = ["storycad/runtime/**"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "storycad/**/*.py",
    "_meta.py",
    "hatch_build.py",
    "README.md",
    "pyproject.toml",
    "LICENSE.TXT",
    "ADDITIONAL-LICENSE-PERMISSIONS.TXT",
]
